#-------------------------------------
# ChangeLog file for package Detector
#-------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-85
2024-06-03 Mikhail Dubrovin
 - rename test_detector to unittest_detector
 - src/UtilsJungfrau.py - in calib_jungfrau_v2 add protection for None - fixing Silke's issue
 - examples/test-issues-2024.py - add issue_2024_05_16, 18
 - test/pytest_detector.py - add test for junngfrau calib with non-default parameters for Silke

Tag: V02-00-84
2024-05-09 Daniel Damiani
- src/DetectorTypes.py - set detector type for HXX-DG1-BMMON-01 to DdlDetector

Tag: V02-00-83
2024-03-18 Mikhail Dubrovin
- add **kwargs to det.image and pass them to det.calib, add warning if the cashed kwargs have changed
  - examples/test-issues-2024.py - update issue_2024_03_08,12
  - src/AreaDetector.py - add **kwargs to det.imagee, pass them to det.calib
  - src/UtilsGraphics.py - update docstring in the file head, remove comments
  - src/UtilsJungfrau.py - save self.kwa in class DetCache, in calib_jungfrau_v2 add warning if kwargs havee changed

2024-03-12 Mikhail Dubrovin
  - examples/test-issues-2023.py - auto-generate USAGE
  - src/AreaDetector.py
	- use method calib_jungfrau_v2,
	- add **kwargs to method image and pass them to det.calib
  - src/PyDetectorAccess.py - add method pixel_offsetpeds for alternative caching
	- src/UtilsJungfrau.py - add new method calib_jungfrau_v2 with better approach to cahing what is used only,
	  combining peds+offset, use np.select to make constants for gain ranges, do calibration in loop for panels
add new tests for scaling in mpi and subprocesses for jungfrau:
  - examples/test-issues-2024.py
  - examples/test-scaling-jungfrau-single-panel.py
  - examples/test-scaling-mpi.py
  - examples/test-scaling-subproc.py
  - examples/test-subproc-output.py

Tag: V02-00-82
2024-01-23 Daniel Damiani